<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    tools:context=".OfficialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/officialLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/officialOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialLocation"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/officialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/officialOffice"
            app:layout_constraintStart_toStartOf="@+id/officialOffice"
            app:layout_constraintTop_toBottomOf="@+id/officialOffice" />

        <TextView
            android:id="@+id/officialParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/officialName"
            app:layout_constraintStart_toStartOf="@+id/officialName"
            app:layout_constraintTop_toBottomOf="@+id/officialName" />

        <ImageView
            android:id="@+id/officialPhotoView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/official_photo"
            android:onClick="officialPhotoClicked"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialParty"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialPhotoView" />

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressLine" />

        <TextView
            android:id="@+id/addressLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addressTitle"
            app:layout_constraintTop_toTopOf="@+id/addressTitle" />

        <TextView
            android:id="@+id/phoneLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/addressLine"
            app:layout_constraintTop_toBottomOf="@+id/addressLine" />

        <TextView
            android:id="@+id/websiteTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/website"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLine" />

        <TextView
            android:id="@+id/websiteLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/phoneLine"
            app:layout_constraintTop_toBottomOf="@+id/emailLine" />

        <TextView
            android:id="@+id/emailLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textview"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/phoneLine"
            app:layout_constraintTop_toBottomOf="@+id/phoneLine" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/facebook_icon"
            android:onClick="onClickedFacebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/websiteLine"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/todo"
            android:onClick="onClickedTwitter"
            app:layout_constraintStart_toEndOf="@+id/facebook"
            app:layout_constraintTop_toBottomOf="@+id/websiteLine"
            app:srcCompat="@drawable/twitter"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/youtube"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/todo"
            android:onClick="onClickedYoutube"
            app:layout_constraintStart_toEndOf="@+id/twitter"
            app:layout_constraintTop_toBottomOf="@+id/websiteLine"
            app:srcCompat="@drawable/youtube" />

        <ImageView
            android:id="@+id/partyIcon"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:onClick="onClicked"
            app:layout_constraintBottom_toBottomOf="@+id/officialPhotoView"
            app:layout_constraintEnd_toEndOf="@+id/officialPhotoView"
            app:layout_constraintStart_toStartOf="@+id/officialPhotoView"
            app:srcCompat="@drawable/dem_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>